changed it back

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class="container">
-   <header><h1>Principles of Designssssssss</h1></header>
+   <header><h1>Principles of Design</h1></header>
    <nav>Navigation
    <ul> 
        <li>
