Added 4 more pictures

--- a/closure.html
+++ b/closure.html
@@ -47,6 +47,10 @@
      <figcaption>This demonstrates closure in the last "Prism." You can see the top of the P R and I are cut off but we still understand the full shape. 
      </figcaption>
    </figure>
+    <figure>
+     <img src="new-closure-edit.jpg" class="responsive" alt="A sign for the national bank of Blacksburg"/>
+     <figcaption>Notice the logo for National Bank of Blacksburg. While literally it is just a bunch of triangles, our eyes see a sun that is created in the negative space.</figcaption>       
+   </figure>   
      </main>
      <aside>Related links
       <ul>Here is the link to the cute dogs Google image search because we all need some dogs to de-stress:
