--- a/contrast.html
+++ b/contrast.html
@@ -47,6 +47,10 @@
      <figcaption>This shows contrast in that the silhouette of the main character contrasts the orange background. There is contrast in the colors and in the use of negative space.
      </figcaption>
    </figure>
+    <figure>
+      <img src="new-contrast-edit.jpg" class="responsive" alt="Labels for the mailboxes of my apartment building"/>
+      <figcaption>This shows contrast in the single address card that is out of place from the rest. Making for a more interesting photo than if they were all similar.</figcaption>    
+   </figure>   
      </main>
      <aside>Related links
       <ul>Here is the link to the cute dogs Google image search because we all need some dogs to de-stress:
