--- a/movement.html
+++ b/movement.html
@@ -47,6 +47,10 @@
      <figcaption>Notice the arching ball shapes between Xtreme Springs. This shows movement as the shape indicates movement between words and represents a bouncing motion like jumping on a trampoline.
      </figcaption>
    </figure>
+    <figure>
+      <img src="new-movement-edit.jpg" class="responsive" alt="An uphill road"/>
+      <figcaption>This demonstrates movement in how the uphill road leads the eye upwards. Based on the angle of the picture and how it's framed you know that there's more over the hill.</figcaption>     
+    </figure>
      </main>
      <aside>Related links
       <ul>Here is the link to the cute dogs Google image search because we all need some dogs to de-stress:
