--- a/proximity.html
+++ b/proximity.html
@@ -47,6 +47,10 @@
      <figcaption>You can see they separated the emergency contact info and the social media info, this is an example of the proximity theory.
      </figcaption>
    </figure>
+     <figure>
+      <img src="new-proximity-edit.jpg" class="responsive" alt="Four apartment units in a row"/>
+      <figcaption>You can see how the 4 apartment units are in the same row and are identical, but because of the spacing your eye see it as two sets of two apartment units.</figcaption>
+     </figure>
      </main>
      <aside>Related links
       <ul>Here is the link to the cute dogs Google image search because we all need some dogs to de-stress:
