Added last photo and photo subheadings

--- a/closure.html
+++ b/closure.html
@@ -41,14 +41,16 @@
      <p>When we see a figure that has negative space, our minds will fill the gap of the negative space to create a more understandable shape. You take 4 pencils and align them into a square, but don't actually have the corners come in contact. Your brain won't see 4 pencils sitting in paired parallels, your brain will see the square.</p>
      <h4>Real World Context</h4>
      <p>Using incomplete shapes if a good way to keep a page interesting and to save on space. Rather than showing the entire shape, use the closure theory to your advantage and use an incomplete form. This is especially useful in logo design.</p>
-       
+        
     <figure>
      <img src="closure-edit.jpg" class="responsive" alt="A flier for PRISM"/>
+     <h5>Samsung Galaxy S9</h5> 
      <figcaption>This demonstrates closure in the last "Prism." You can see the top of the P R and I are cut off but we still understand the full shape. 
      </figcaption>
    </figure>
     <figure>
      <img src="new-closure-edit.jpg" class="responsive" alt="A sign for the national bank of Blacksburg"/>
+     <h6>Nikon D40</h6>
      <figcaption>Notice the logo for National Bank of Blacksburg. While literally it is just a bunch of triangles, our eyes see a sun that is created in the negative space.</figcaption>       
    </figure>   
      </main>
@@ -57,6 +59,6 @@
      <li><a href="https://www.google.com/search?q=cute+dogs&safe=active&rlz=1C1CHBF_enUS805US805&sxsrf=ACYBGNQiV2ahhez13xk5zzT7tmjbj6TySw:1569869659211&source=lnms&tbm=isch&sa=X&ved=0ahUKEwin44WbnPnkAhUkvlkKHeGlD6sQ_AUIEigB&biw=1500&bih=858">ALL THE DOGS!!!!!!</a></li>
      </ul>
       </aside>
-     <footer><h5>Contact me at: wyatts@vt.edu</h5></footer>
+     <footer><h7>Contact me at: wyatts@vt.edu</h7></footer>
   </body>
 </html>
