--- a/contrast.html
+++ b/contrast.html
@@ -44,11 +44,13 @@
        
     <figure>
      <img src="contrast-edit.jpg" class="responsive" alt="An art book of Blade Runner 2049"/>
+     <h5>Samsung Galaxy S9</h5>
      <figcaption>This shows contrast in that the silhouette of the main character contrasts the orange background. There is contrast in the colors and in the use of negative space.
      </figcaption>
    </figure>
     <figure>
       <img src="new-contrast-edit.jpg" class="responsive" alt="Labels for the mailboxes of my apartment building"/>
+      <h6>Nikon D40</h6>
       <figcaption>This shows contrast in the single address card that is out of place from the rest. Making for a more interesting photo than if they were all similar.</figcaption>    
    </figure>   
      </main>
@@ -57,6 +59,6 @@
      <li><a href="https://www.google.com/search?q=cute+dogs&safe=active&rlz=1C1CHBF_enUS805US805&sxsrf=ACYBGNQiV2ahhez13xk5zzT7tmjbj6TySw:1569869659211&source=lnms&tbm=isch&sa=X&ved=0ahUKEwin44WbnPnkAhUkvlkKHeGlD6sQ_AUIEigB&biw=1500&bih=858">ALL THE DOGS!!!!!!</a></li>
      </ul>
       </aside>
-     <footer><h5>Contact me at: wyatts@vt.edu</h5></footer>
+     <footer><h7>Contact me at: wyatts@vt.edu</h7></footer>
   </body>
 </html>
