--- a/focal-point-emphasis.html
+++ b/focal-point-emphasis.html
@@ -45,15 +45,21 @@
        
     <figure>
      <img src="focal-point-emphasis-edit.jpg" class="responsive" alt="Batman"/>
+     <h5>Samsung Galaxy S9</h5>
      <figcaption>This is Batman. Batman is the focal point of the picture.
      </figcaption>
-   </figure>  
+   </figure> 
+     <figure>
+     <img src="new-focal-point-edit.jpg" class="responsive" alt="Batman again"/>
+     <h6>Nikon D40</h6>
+     <figcaption>This is still Batman. Batman is missing his parents. Batman is still the focal point of the picture.</figcaption>     
+     </figure>
     </main>
      <aside>Related links
       <ul>Here is the link to the cute dogs Google image search because we all need some dogs to de-stress:
      <li><a href="https://www.google.com/search?q=cute+dogs&safe=active&rlz=1C1CHBF_enUS805US805&sxsrf=ACYBGNQiV2ahhez13xk5zzT7tmjbj6TySw:1569869659211&source=lnms&tbm=isch&sa=X&ved=0ahUKEwin44WbnPnkAhUkvlkKHeGlD6sQ_AUIEigB&biw=1500&bih=858">ALL THE DOGS!!!!!!</a></li>
      </ul>
       </aside>
-     <footer><h5>Contact me at: wyatts@vt.edu</h5></footer>
+     <footer><h7>Contact me at: wyatts@vt.edu</h7></footer>
   </body>
 </html>
