--- a/movement.html
+++ b/movement.html
@@ -44,11 +44,13 @@
        
     <figure>
      <img src="movement-edit.jpg" class="responsive" alt="A flier for Xtreme Springs Trampoline Park"/>
+     <h5>Samsung Galaxy S9</h5>
      <figcaption>Notice the arching ball shapes between Xtreme Springs. This shows movement as the shape indicates movement between words and represents a bouncing motion like jumping on a trampoline.
      </figcaption>
    </figure>
     <figure>
       <img src="new-movement-edit.jpg" class="responsive" alt="An uphill road"/>
+      <h6>Nikon D40</h6>
       <figcaption>This demonstrates movement in how the uphill road leads the eye upwards. Based on the angle of the picture and how it's framed you know that there's more over the hill.</figcaption>     
     </figure>
      </main>
@@ -57,6 +59,6 @@
      <li><a href="https://www.google.com/search?q=cute+dogs&safe=active&rlz=1C1CHBF_enUS805US805&sxsrf=ACYBGNQiV2ahhez13xk5zzT7tmjbj6TySw:1569869659211&source=lnms&tbm=isch&sa=X&ved=0ahUKEwin44WbnPnkAhUkvlkKHeGlD6sQ_AUIEigB&biw=1500&bih=858">ALL THE DOGS!!!!!!</a></li>
      </ul>
       </aside>
-     <footer><h5>Contact me at: wyatts@vt.edu</h5></footer>
+     <footer><h7>Contact me at: wyatts@vt.edu</h7></footer>
   </body>
 </html>
