--- a/proximity.html
+++ b/proximity.html
@@ -44,11 +44,13 @@
        
     <figure>
      <img src="proximity-edit.jpg" class="responsive" alt="Flier for student police academy"/>
+     <h5>Samsung Galaxy S9</h5>
      <figcaption>You can see they separated the emergency contact info and the social media info, this is an example of the proximity theory.
      </figcaption>
    </figure>
      <figure>
       <img src="new-proximity-edit.jpg" class="responsive" alt="Four apartment units in a row"/>
+      <h6>Nikon D40</h6>
       <figcaption>You can see how the 4 apartment units are in the same row and are identical, but because of the spacing your eye see it as two sets of two apartment units.</figcaption>
      </figure>
      </main>
@@ -57,6 +59,6 @@
      <li><a href="https://www.google.com/search?q=cute+dogs&safe=active&rlz=1C1CHBF_enUS805US805&sxsrf=ACYBGNQiV2ahhez13xk5zzT7tmjbj6TySw:1569869659211&source=lnms&tbm=isch&sa=X&ved=0ahUKEwin44WbnPnkAhUkvlkKHeGlD6sQ_AUIEigB&biw=1500&bih=858">ALL THE DOGS!!!!!!</a></li>
      </ul>
       </aside>
-     <footer><h5>Contact me at: wyatts@vt.edu</h5></footer>
+     <footer><h7>Contact me at: wyatts@vt.edu</h7></footer>
   </body>
 </html>
