changed focal point image

--- a/focal-point-emphasis.html
+++ b/focal-point-emphasis.html
@@ -50,9 +50,9 @@
      </figcaption>
    </figure> 
      <figure>
-     <img src="new-focal-point-edit.jpg" class="responsive" alt="Batman again"/>
+     <img src="new-focal-point-edit.jpg" class="responsive" alt="Captain America"/>
      <h6>Nikon D40</h6>
-     <figcaption>This is still Batman. Batman is missing his parents. Batman is still the focal point of the picture.</figcaption>     
+     <figcaption>This is Captain America. Captain America is the focal point of the picture.</figcaption>     
      </figure>
     </main>
      <aside>Related links
