--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
    <main>
      <h2>Introduction</h2>
      <p>My name is Wyatt Sherwood, I am a Sophomore Comm Studies major at Virginia Tech. In this project I will explain the fundamental principles of good design, including summaries from the textbook, White Space is Not Your Enemy, and picture examples.</p>
-
+     <h3>New Photos!!!!!</h3>
+     <p>New photos have been added to the website!!! Every page with new photos have the photos labeled with what tool was used.The old photos were taken with a Samsung Galaxy S9 and the new photos were taken with a Nikon D40 DSLR Camera.</p>
+     
+     <ul>These are the pages with new photos:
+       <li>Focal Point and Emphasis</li>
+       <li>Contrast</li>
+       <li>Movement</li>
+       <li>Proximity</li>     
+       <li>Closure</li> 
+       </ul>  
+       
     <figure>
      <img src="homepage-edit.jpg" class="responsive" alt="the Big Event volunteering"/>
      <figcaption>My friends and I working at the Big Event, helping to stain a deck and other yard work. Thought it was a good picture and you always have to rep the Big Event.
@@ -50,6 +60,6 @@
      <li><a href="https://www.google.com/search?q=cute+dogs&safe=active&rlz=1C1CHBF_enUS805US805&sxsrf=ACYBGNQiV2ahhez13xk5zzT7tmjbj6TySw:1569869659211&source=lnms&tbm=isch&sa=X&ved=0ahUKEwin44WbnPnkAhUkvlkKHeGlD6sQ_AUIEigB&biw=1500&bih=858">ALL THE DOGS!!!!!!</a></li>
      </ul>
      </aside>
-     <footer><h3>Contact me at: wyatts@vt.edu</h3></footer>
+     <footer><h4>Contact me at: wyatts@vt.edu</h4></footer>
   </body>
 </html>
